<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.maomakis.ui.main.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_comida_diaria"
        android:name="com.example.maomakis.ui.view.main.ComidaDiariaFragment"
        android:label="@string/platos_del_d_a"
        tools:layout="@layout/fragment_comida_diaria" />

    <fragment
        android:id="@+id/nav_favorito"
        android:name="com.example.maomakis.ui.view.main.favorito.FavoritoFragment"
        android:label="@string/favorito"
        tools:layout="@layout/fragment_favorito" />
    <fragment
        android:id="@+id/nav_mi_carrito"
        android:name="com.example.maomakis.ui.view.main.MiCarritoFragment"
        android:label="@string/mi_carta"
        tools:layout="@layout/fragment_carrito" />
</navigation>