<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:layout_marginBottom="2dp"
    android:layout_marginTop="2dp"
    app:cardBackgroundColor="@android:color/transparent"
    app:cardElevation="3dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="horizontal"
        android:background="@drawable/foreground_white" >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="290dp"
            android:layout_height="150dp">
            <ImageView
                android:id="@+id/destacado_img"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/todo"
                android:scaleType="centerCrop"
                android:src="@drawable/dinner"
                android:foreground="@drawable/foreground_black_diagonal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/id_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/descripcion"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:fontFamily="@font/lobster" />

            <TextView
                android:id="@+id/id_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lobster"
                android:text="@string/nombre_de_la_comida"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_marginStart="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/id_description" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginStart="4dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="19dp"
                android:layout_height="19dp"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="2dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/start"/>

            <TextView
                android:id="@+id/id_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:text="@string/todo"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginStart="25dp"
                android:layout_marginBottom="3dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/dollarsymbol"
                app:tint="@color/red" />

            <TextView
                android:id="@+id/id_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:singleLine="true"
                android:text="@string/precio"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:singleLine="true"
                android:text="@string/ver_detalles"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>