<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="2dp"
    android:layout_marginTop="2dp"
    app:cardBackgroundColor="@android:color/transparent"
    app:cardElevation="3dp"
    app:cardCornerRadius="16dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        android:orientation="horizontal"
        android:background="@drawable/foreground_white_corner" >
        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/img"
            android:layout_width="200dp"
            android:layout_height="125dp"
            android:layout_margin="5dp"
            android:scaleType="centerCrop"
            android:src="@drawable/coffe"
            app:riv_corner_radius="14dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:layout_margin="5dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:gravity="top">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/id_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/lobster"
                        android:singleLine="true"
                        android:text="@string/todo"
                        android:textColor="@color/black"
                        android:textSize="24sp"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/id_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:fontFamily="@font/lobster"
                        android:maxLines="2"
                        android:text="@string/descripcion"
                        android:textColor="@color/black"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageButton
                        android:id="@+id/favoriteButton"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_margin="2dp"
                        android:layout_marginEnd="2dp"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/ic_favorite_border"
                        app:tint="@color/red"
                        tools:ignore="MissingConstraints,TouchTargetSizeCheck" />
                    <ImageButton
                        android:id="@+id/addToCartButton"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_margin="2dp"
                        android:layout_marginEnd="2dp"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/ic_add_shopping_cart"
                        app:tint="@color/red"
                        tools:ignore="MissingConstraints,TouchTargetSizeCheck" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:gravity="bottom">

                <ImageView
                    android:layout_width="19dp"
                    android:layout_height="19dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="2dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/start"/>

                <TextView
                    android:id="@+id/id_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:text="@string/todo"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginBottom="3dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/dollarsymbol"
                    app:tint="@color/red" />

                <TextView
                    android:id="@+id/id_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:singleLine="true"
                    android:text="@string/precio"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>